// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JoinPage render renders correctly 1`] = `
<div>
  <Script
    attributes={Object {}}
    onCreate={[Function]}
    onError={[Function]}
    onLoad={[Function]}
    url="https://www.google.com/recaptcha/api.js"
  />
  <CenteredLogo />
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Connect(ReduxForm)
      onSubmit={[Function]}
    />
  </Panel>
  <small>
    Already have an account? 
    <UnstyledLink
      to="/auth"
    >
      Log In
    </UnstyledLink>
    .
  </small>
</div>
`;

exports[`JoinPage render renders errors 1`] = `
<div>
  <Script
    attributes={Object {}}
    onCreate={[Function]}
    onError={[Function]}
    onLoad={[Function]}
    url="https://www.google.com/recaptcha/api.js"
  />
  <CenteredLogo />
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Error
      error={
        <JoinError
          data={Object {}}
          errors={Object {}}
        />
      }
    />
    <Connect(ReduxForm)
      onSubmit={[Function]}
    />
  </Panel>
  <small>
    Already have an account? 
    <UnstyledLink
      to="/auth"
    >
      Log In
    </UnstyledLink>
    .
  </small>
</div>
`;
